--- a/HomePage/home.html
+++ b/HomePage/home.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quick Quiz</title>
-    <link rel="stylesheet" href="app.css" />
+    <title>Photo Uploader</title>
+    <link rel="stylesheet" href="home.css" />
   </head>
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>Quick Quiz</h1>
-        <a class="btn" href="/game.html">Play</a>
-        <a class="btn" href="/highscores.html">High Scores</a>
+        
+        <a class="btn" href="/Login/Login.html"><h1>Welcome to Photo Uploader</h1></a>
+
+        <h2>Copyright 2021 &copy; BY INGWALD inc.</h2>
       </div>
     </div>
   </body>
